log
Tue 21 Mar 2023 09:45:01 PM UTC: 
 tests:  0|6
total_score: 0/70
2a10711
Tue 21 Mar 2023 09:45:44 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a5ac433
Tue 21 Mar 2023 10:04:23 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
46c804c
Wed 22 Mar 2023 02:22:12 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
0538262
Thu 23 Mar 2023 03:18:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
11acfa3
Thu 23 Mar 2023 03:24:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0735a0b
Thu 23 Mar 2023 03:26:27 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a5f1fa9
Thu 23 Mar 2023 03:28:30 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
806201d
Thu 23 Mar 2023 03:28:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4661b21
Thu 23 Mar 2023 03:29:44 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
bce81fc
Thu 23 Mar 2023 03:32:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e0bf729
Thu 23 Mar 2023 03:33:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cb07a78
Thu 23 Mar 2023 03:33:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5bc6db6
Thu 23 Mar 2023 03:36:29 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:468: error: control reaches end of non-void function [-Werror=return-type]
  468 | }
      | 
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:82:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   82 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:73:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   73 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:60:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   60 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
25dd136
Thu 23 Mar 2023 03:37:15 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:63:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   63 |   return NULL;
      |          ^~~~
list.c:60:6: note: declared here
   60 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:468: error: control reaches end of non-void function [-Werror=return-type]
  468 | }
      | 
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:83:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   83 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:74:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   74 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:60:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   60 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8776b9a
Thu 23 Mar 2023 03:39:01 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
87371fe
Thu 23 Mar 2023 03:40:29 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6cd5de6
